[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-dynamic-site"
version = "0.1.0"
description = "LLM-driven dynamic website with cache-first architecture"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "LLM Dynamic Site", email = "example@example.com"}
]
dependencies = [
    "fastapi[standard]>=0.118.0",
    "smolagents>=1.22.0",
    "pymemcache>=4.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[project.scripts]
llm-site = "app.main:main"